v0.10.0a2/_sources/_api/ophyd_async/ophyd_async.epics.adkinetix.md.txt
# {py:mod}`ophyd_async.epics.adkinetix`

```{py:module} ophyd_async.epics.adkinetix
```

```{autodoc2-docstring} ophyd_async.epics.adkinetix
:allowtitles:
```

## Package Contents

### Classes

````{list-table}
:class: autosummary longtable
:align: left

* - {py:obj}`KinetixDetector <ophyd_async.epics.adkinetix._kinetix.KinetixDetector>`
  - ```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix.KinetixDetector
    :summary:
    ```
* - {py:obj}`KinetixController <ophyd_async.epics.adkinetix._kinetix_controller.KinetixController>`
  - ```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_controller.KinetixController
    :summary:
    ```
* - {py:obj}`KinetixDriverIO <ophyd_async.epics.adkinetix._kinetix_io.KinetixDriverIO>`
  - ```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixDriverIO
    :summary:
    ```
* - {py:obj}`KinetixTriggerMode <ophyd_async.epics.adkinetix._kinetix_io.KinetixTriggerMode>`
  - ```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixTriggerMode
    :summary:
    ```
* - {py:obj}`KinetixReadoutMode <ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode>`
  - ```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode
    :summary:
    ```
````

### API

````{py:class} KinetixDetector(prefix: str, path_provider: ~ophyd_async.core.PathProvider, drv_suffix: str = 'cam1:', writer_cls: type[~ophyd_async.epics.adcore.ADWriter] = ADHDFWriter, fileio_suffix: str | None = None, name: str = '', plugins: dict[str, ~ophyd_async.epics.adcore.NDPluginBaseIO] | None = None, config_sigs: ~collections.abc.Sequence[~ophyd_async.core.SignalR] = ())
:canonical: ophyd_async.epics.adkinetix._kinetix.KinetixDetector

Bases: {py:obj}`ophyd_async.epics.adcore.AreaDetector`\[{py:obj}`ophyd_async.epics.adkinetix._kinetix_controller.KinetixController`\]

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix.KinetixDetector
```

````

`````{py:class} KinetixController(driver: ~ophyd_async.epics.adkinetix._kinetix_io.KinetixDriverIO, good_states: frozenset[~ophyd_async.epics.adcore.ADState] = adcore.DEFAULT_GOOD_STATES)
:canonical: ophyd_async.epics.adkinetix._kinetix_controller.KinetixController

Bases: {py:obj}`ophyd_async.epics.adcore.ADBaseController`\[{py:obj}`ophyd_async.epics.adkinetix._kinetix_io.KinetixDriverIO`\]

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_controller.KinetixController
```

````{py:method} get_deadtime(exposure: float | None) -> float
:canonical: ophyd_async.epics.adkinetix._kinetix_controller.KinetixController.get_deadtime

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_controller.KinetixController.get_deadtime
```

````

````{py:method} prepare(trigger_info: ~ophyd_async.core.TriggerInfo)
:canonical: ophyd_async.epics.adkinetix._kinetix_controller.KinetixController.prepare
:async:

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_controller.KinetixController.prepare
```

````

`````

`````{py:class} KinetixDriverIO(prefix: str, with_pvi: bool = False, name: str = '')
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixDriverIO

Bases: {py:obj}`ophyd_async.epics.adcore.ADBaseIO`

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixDriverIO
```

````{py:attribute} trigger_mode
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixDriverIO.trigger_mode
:type: ~typing.Annotated[~ophyd_async.core.SignalRW[~ophyd_async.epics.adkinetix._kinetix_io.KinetixTriggerMode], PvSuffix('TriggerMode')]
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixDriverIO.trigger_mode
```

````

````{py:attribute} readout_port_idx
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixDriverIO.readout_port_idx
:type: ~typing.Annotated[~ophyd_async.core.SignalRW[~ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode], PvSuffix('ReadoutPortIdx')]
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixDriverIO.readout_port_idx
```

````

`````

`````{py:class} KinetixTriggerMode()
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixTriggerMode

Bases: {py:obj}`ophyd_async.core.StrictEnum`

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixTriggerMode
```

````{py:attribute} INTERNAL
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixTriggerMode.INTERNAL
:value: >
   'Internal'

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixTriggerMode.INTERNAL
```

````

````{py:attribute} EDGE
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixTriggerMode.EDGE
:value: >
   'Rising Edge'

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixTriggerMode.EDGE
```

````

````{py:attribute} GATE
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixTriggerMode.GATE
:value: >
   'Exp. Gate'

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixTriggerMode.GATE
```

````

`````

`````{py:class} KinetixReadoutMode()
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode

Bases: {py:obj}`ophyd_async.core.StrictEnum`

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode
```

````{py:attribute} SENSITIVITY
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode.SENSITIVITY
:value: >
   1

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode.SENSITIVITY
```

````

````{py:attribute} SPEED
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode.SPEED
:value: >
   2

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode.SPEED
```

````

````{py:attribute} DYNAMIC_RANGE
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode.DYNAMIC_RANGE
:value: >
   3

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode.DYNAMIC_RANGE
```

````

````{py:attribute} SUB_ELECTRON
:canonical: ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode.SUB_ELECTRON
:value: >
   4

```{autodoc2-docstring} ophyd_async.epics.adkinetix._kinetix_io.KinetixReadoutMode.SUB_ELECTRON
```

````

`````
