v0.17a1/_sources/_api/ophyd_async/ophyd_async.epics.adkinetix.md.txt
# {py:mod}`ophyd_async.epics.adkinetix`

```{py:module} ophyd_async.epics.adkinetix
```

```{autodoc2-docstring} ophyd_async.epics.adkinetix
:allowtitles:
```

## Module Contents

### Classes

````{list-table}
:class: autosummary longtable
:align: left

* - {py:obj}`KinetixDetector <ophyd_async.epics.adkinetix.KinetixDetector>`
  - ```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixDetector
    :summary:
    ```
* - {py:obj}`KinetixDriverIO <ophyd_async.epics.adkinetix.KinetixDriverIO>`
  - ```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixDriverIO
    :summary:
    ```
* - {py:obj}`KinetixTriggerLogic <ophyd_async.epics.adkinetix.KinetixTriggerLogic>`
  - ```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixTriggerLogic
    :summary:
    ```
* - {py:obj}`KinetixTriggerMode <ophyd_async.epics.adkinetix.KinetixTriggerMode>`
  - ```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixTriggerMode
    :summary:
    ```
* - {py:obj}`KinetixReadoutMode <ophyd_async.epics.adkinetix.KinetixReadoutMode>`
  - ```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixReadoutMode
    :summary:
    ```
````

### API

````{py:class} KinetixDetector(prefix: str, path_provider: ~ophyd_async.core.PathProvider | None = None, driver_suffix='cam1:', writer_type: ~ophyd_async.epics.adcore.ADWriterType | None = ADWriterType.HDF, writer_suffix: str | None = None, plugins: dict[str, ~ophyd_async.epics.adcore.NDPluginBaseIO] | None = None, config_sigs: ~collections.abc.Sequence[~ophyd_async.core.SignalR] = (), name: str = '')
:canonical: ophyd_async.epics.adkinetix.KinetixDetector

Bases: {py:obj}`ophyd_async.epics.adcore.AreaDetector`\[{py:obj}`ophyd_async.epics.adkinetix.KinetixDriverIO`\]

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixDetector
```

````

`````{py:class} KinetixDriverIO(prefix: str, with_pvi: bool = False, name: str = '')
:canonical: ophyd_async.epics.adkinetix.KinetixDriverIO

Bases: {py:obj}`ophyd_async.epics.adcore.ADBaseIO`

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixDriverIO
```

````{py:attribute} trigger_mode
:canonical: ophyd_async.epics.adkinetix.KinetixDriverIO.trigger_mode
:type: ~typing.Annotated[~ophyd_async.core.SignalRW[~ophyd_async.epics.adkinetix.KinetixTriggerMode], PvSuffix('TriggerMode')]
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixDriverIO.trigger_mode
```

````

````{py:attribute} readout_port_idx
:canonical: ophyd_async.epics.adkinetix.KinetixDriverIO.readout_port_idx
:type: ~typing.Annotated[~ophyd_async.core.SignalRW[~ophyd_async.epics.adkinetix.KinetixReadoutMode], PvSuffix('ReadoutPortIdx')]
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixDriverIO.readout_port_idx
```

````

`````

`````{py:class} KinetixTriggerLogic(driver: ~ophyd_async.epics.adkinetix.KinetixDriverIO)
:canonical: ophyd_async.epics.adkinetix.KinetixTriggerLogic

Bases: {py:obj}`ophyd_async.core.DetectorTriggerLogic`

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixTriggerLogic
```

````{py:method} get_deadtime(config_values: ~ophyd_async.core.SignalDict) -> float
:canonical: ophyd_async.epics.adkinetix.KinetixTriggerLogic.get_deadtime

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixTriggerLogic.get_deadtime
```

````

````{py:method} prepare_internal(num: int, livetime: float, deadtime: float)
:canonical: ophyd_async.epics.adkinetix.KinetixTriggerLogic.prepare_internal
:async:

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixTriggerLogic.prepare_internal
```

````

````{py:method} prepare_edge(num: int, livetime: float)
:canonical: ophyd_async.epics.adkinetix.KinetixTriggerLogic.prepare_edge
:async:

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixTriggerLogic.prepare_edge
```

````

````{py:method} prepare_level(num: int)
:canonical: ophyd_async.epics.adkinetix.KinetixTriggerLogic.prepare_level
:async:

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixTriggerLogic.prepare_level
```

````

`````

`````{py:class} KinetixTriggerMode()
:canonical: ophyd_async.epics.adkinetix.KinetixTriggerMode

Bases: {py:obj}`ophyd_async.core.StrictEnum`

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixTriggerMode
```

````{py:attribute} INTERNAL
:canonical: ophyd_async.epics.adkinetix.KinetixTriggerMode.INTERNAL
:value: >
   'Internal'

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixTriggerMode.INTERNAL
```

````

````{py:attribute} EDGE
:canonical: ophyd_async.epics.adkinetix.KinetixTriggerMode.EDGE
:value: >
   'Rising Edge'

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixTriggerMode.EDGE
```

````

````{py:attribute} GATE
:canonical: ophyd_async.epics.adkinetix.KinetixTriggerMode.GATE
:value: >
   'Exp. Gate'

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixTriggerMode.GATE
```

````

`````

`````{py:class} KinetixReadoutMode()
:canonical: ophyd_async.epics.adkinetix.KinetixReadoutMode

Bases: {py:obj}`ophyd_async.core.StrictEnum`

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixReadoutMode
```

````{py:attribute} SENSITIVITY
:canonical: ophyd_async.epics.adkinetix.KinetixReadoutMode.SENSITIVITY
:value: >
   '1'

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixReadoutMode.SENSITIVITY
```

````

````{py:attribute} SPEED
:canonical: ophyd_async.epics.adkinetix.KinetixReadoutMode.SPEED
:value: >
   '2'

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixReadoutMode.SPEED
```

````

````{py:attribute} DYNAMIC_RANGE
:canonical: ophyd_async.epics.adkinetix.KinetixReadoutMode.DYNAMIC_RANGE
:value: >
   '3'

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixReadoutMode.DYNAMIC_RANGE
```

````

````{py:attribute} SUB_ELECTRON
:canonical: ophyd_async.epics.adkinetix.KinetixReadoutMode.SUB_ELECTRON
:value: >
   '4'

```{autodoc2-docstring} ophyd_async.epics.adkinetix.KinetixReadoutMode.SUB_ELECTRON
```

````

`````
